SUBDIRS = libcrush aggregate aggregate2 buffer convdate cutfield \
          deltaforce foreach_parallel funiq grepfield indexof \
          mergekeys pivot range reorder subtotal tochar truncfield \
          add_field fieldsplit translate_field dbstream dates_in_range \
					findfiles csvformat calcfield find_not_processed deltadays
