
EXTRA_DIST = bstree.h \
             config.h \
             config.h.in \
             ffutils.h \
             hashfuncs.h \
             hashtbl.h \
             hashtbl2.h \
             ht2_GeneralHashFunctions.h \
             linklist.h \
             mempool.h \
             qsort_helper.h \
             queue.h
