
lib_LTLIBRARIES = libcrush.la
libcrush_la_SOURCES = GeneralHashFunctions.c bstree.c ffutils.c hashfuncs.c \
                      hashtbl.c hashtbl2.c linklist.c mempool.c qsort_helper.c \
											queue.c dbfr.c

libcrush_la_LDFLAGS = -version-info 1:0:0

# check_PROGRAMS = test/ffutils_test

# TESTS = $(check_PROGRAMS)

# test_crush_test_LDADD = libcrush.la
